# easyDataverse

./: .gitignore  LICENSE  MANIFEST.in  Readme.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: build.yaml  codespell.yml  integration-tests.yaml  python-publish.yml  stale.yml  unit-tests.yaml  version.yaml
.github/workflows/scripts/: update_version.py
Examples/Generation/: generate_api.sh
Examples/Generation/blocks/: archival.tsv  citation.tsv  codemeta.tsv  privacy.tsv
Examples/Generation/pyExampleAPI/: Dockerfile  setup.py
easyDataverse/: __init__.py  base.py  classgen.py  cli.py  connect.py  dataset.py  datasettype.py  dataverse.py  downloader.py  exceptions.py  file.py  license.py  tabdata.py  uploader.py  utils.py
easyDataverse/core/: __init__.py  base.py  connect.py  dataset.py  dataverse.py  exceptions.py  file.py  utils.py
easyDataverse/llm/: __init__.py  extraction.py
easyDataverse/tools/: __init__.py  uploader.py  utils.py  xmltools.py
easyDataverse/tools/codegen/: __init__.py  clsmod.py  filehandling.py  generator.py  restmod.py  (+1 more)
examples/: EasyDataverseBasics.ipynb
examples/data/: README.md
tests/: conftest.py  test_dataset.py  test_dataverse_base.py
tests/core/: test_dataset.py  test_dataverse_base.py
tests/fixtures/: data.tab  minimal_upload.json  minimal_upload_other_license.json
tests/integration/: test_connection.py  test_dataset_creation.py  test_dataset_download.py  test_dataset_update.py  test_datasettype.py
tests/unit/: test_base.py  test_connect.py  test_dataset.py  test_dataverse.py  test_tabdata.py
(+87 files in other folders)
